--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(AED_Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(AED_Project main.cpp)
+add_executable(AED_Project main.cpp
+        Classes/Student.cpp
+        Classes/Student.h)
