--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(AED_Project main.cpp
         Classes/Student.cpp
-        Classes/Student.h)
+        Classes/Student.h
+        Classes/UC.cpp
+        Classes/UC.h)
