--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(AED_Project main.cpp
         Classes/Student.cpp
         Classes/Student.h
+        Classes/Class.cpp
+        Classes/Class.h
 )
